fix skill section tablet responsiveness

--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ button:hover {
   flex-direction: column;
   align-items: center;
   background-color: #ffe0e5;
-  height: 800px;
-  padding-top: 80px;
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 
 .contact-section {
@@ -362,22 +362,20 @@ color: black;
 
 .skills-title {
   display: flex;
-  margin-top: 121px;
   justify-content: center;
   height: fit-content;
-  width: 851px;
 }
 
 .skills-lists {
   display: flex;
   justify-content: center;
-  width: 851px;
-  gap: 70px;
-  margin-top: 79px;
+  width: 900px;
+  gap: 80px;
+  margin-top: 50px;
 }
 
 ul li {
-  margin-top: 12px;
+  margin-top: 14px;
   font-family: "Outfit";
   font-size: 19px;
   line-height: 32px;
@@ -469,6 +467,13 @@ color: black;
     align-items: center;
     gap: 60px;
     text-align: center;
+  }
+  .skills-lists {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    gap: 40px;
+    margin-top: 50px;
   }
 }
 
